Deep-dive appendix: JMX vs OpenTelemetry for driver metrics
Agent-Logs-Url: https://github.com/Open-J-Proxy/ojp/sessions/38f43dd6-4ed9-40cf-bf77-2336673b960c

Co-authored-by: rrobetti <7221783+rrobetti@users.noreply.github.com>